table Alignment fixed

--- a/inc/frontend/css/wp-table-builder-frontend.css
+++ b/inc/frontend/css/wp-table-builder-frontend.css
@@ -10,7 +10,7 @@
     position: relative;
     width: 100%;
     /*min-width: 100%;*/
-    margin: 30px 0;
+    margin: 30px auto;
 }
 
 .wptb-table-container-matrix {
